--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = "MIT"
 authors = [
-    {name = "Your Name", email = "your.email@example.com"}
+    {name = "Vandan Rogheliya", email = "vandan.rogheliya@gmail.com"}
 ]
 keywords = ["transaction", "sms", "parser", "banking"]
 classifiers = [
@@ -34,9 +34,9 @@ dev = [
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/txn_msg_parser"
-Repository = "https://github.com/yourusername/txn_msg_parser"
-Issues = "https://github.com/yourusername/txn_msg_parser/issues"
+Homepage = "https://github.com/VandanRogheliya/txn_msg_parser"
+Repository = "https://github.com/VandanRogheliya/txn_msg_parser"
+Issues = "https://github.com/VandanRogheliya/txn_msg_parser/issues"
 
 [tool.setuptools.packages.find]
 where = ["."]
